Fix map not showing markers due to useNavigate - make new post video to play automatically

--- a/src/components/VideoPlayer/VideoPlayer.css
+++ b/src/components/VideoPlayer/VideoPlayer.css
@@ -1,6 +1,6 @@
-video::-webkit-media-controls {
+/* video::-webkit-media-controls {
   display: none !important;
-}
+} */
 
 .VideoPlayer {
   position: relative;
